--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "skijwebsite",
+  "homepage": "http://dholland.site/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-router-scroll-top": "^0.2.1",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
