--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-scroll-top": "^0.2.1",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "react-simple-maps": "^1.0.0-beta.0",
+    "rgb-hex": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
